compiler/testData/diagnostics/tests/inference/anonymousFunctionAgainsSuspendFunctionType.kt
// RUN_PIPELINE_TILL: FRONTEND

fun foo(f: suspend () -> Unit) {
}

fun bar() {
    foo(<!TYPE_MISMATCH!>fun () {}<!>)
}